--- a/views/action.html
+++ b/views/action.html
@@ -1,13 +1,11 @@
 <link rel="stylesheet" href="styles/action.css">
-<div class="">
+<div class="divImage">
 
-  <img ng-src={{test}} alt="">
-
-</div>
-
-
-<div class="foot">
-
-  <footer><button class="tweetButton" type="button" name="button"><a class="postTweet" href={{tweet}} type="button" ng-click=tweet() name="button">Tweet</a></button></footer>
+  <img class="movie" ng-src={{test}} alt="">
 
 </div>
+
+
+
+
+<a class="fa fa-twitter fa-4x foot"href={{tweet}} type="button" ng-click=tweet() name="button">Tweet</a>
