--- a/views/drama.html
+++ b/views/drama.html
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="styles/drama.css">
-<div class="">
+<div class="divImage">
 
-  <img ng-src={{test}}  alt="">
+  <img class="movie" ng-src={{test}}  alt="">
 
 </div>
 
 <div class="foot">
 
-  <footer><button class="tweetButton"><a class="postTweet" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a></button></footer>
+  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a><
 
 </div>
