--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
-html, body{
+*{
   box-sizing: border-box;
   margin: auto;
+
 }
 body{
-  background-color: black;
+  background-image: url("https://i.ytimg.com/vi/50AF-uFpRtc/maxresdefault.jpg");
+}
+.bgImage{
+  max-width: 100%;
+  position: relative;
+}
+.realbgImage {
+  z-index: -1;
+  max-width: 100%;
+  min-height: 100%;
+  min-width: 524px;
+  left: -50%;
+  right: -50%;
+  height: auto;
+
+  position: fixed;
 
 }
 
@@ -34,61 +50,65 @@ ul{
   border-radius: 10px;
 }
 
-div{
-  margin-top: 6%;
-  width: 100%;
-  background-color: white;
+.divImage{
+  margin-top: 50px;
+  width: 80%;
+  background-color: inherit;
   position: relative;
+  display: flex;
 }
 .imageLink{
   width: 60px;
 }
 
-img{
-  left:20%;
-  right: 20%;
-  position: absolute;
-  text-align: center;
-  display: flex;
-  width: 60%;
-  max-height: 500px;
+.movie{
+  position: fixed;
+  margin-top: 1px;
+  width: 114vh;
+  max-width: : 1065px;
+  height: 606px;
+  min-height: 606px;
+  left: -49%;
+  right: -50%;
+
 }
 .foot{
-  width: 40%;
+  width: 10%;
   height: 99px;
-  left:30%;
-  right: 30%;
-  display: flex;
-  background-color: white;
-  position: absolute;
-  top: 70%;
+  left:40%;
+  right: 40%;
+  background-color: inherit;
+  position: fixed;
+  top: 80%;
   text-align: center;
   display: none;
+  color: green;
 }
 footer{
   width: 100%;
   background-color: black;
 
 }
-.postTweet{
-  font-size: 70px;
-}
+
+
 
 @media (max-width: 900px) {
+  .divImage{
+    margin-top: 3px;
+
+  }
   .foot{
-    width: 60%;
-    left: 20%;
-    right: 20%;
+    width: 20%;
+    left: 40%;
+    right: 40%;
   }
   ul{
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
   }
-  img{
-    left: 5%;
-    right: 5%;
-    width: 90%;
+  .movie{
+
     height: 600px;
   }
 }
