--- a/views/comedy.html
+++ b/views/comedy.html
@@ -1,14 +1,14 @@
 <link rel="stylesheet" href="styles/comedy.css">
 
-<div class="">
+<div class="divImage">
 
-  <img ng-src={{test}} alt="">
+  <img class="movie" ng-src={{test}} alt="">
 
 </div>
 
 
 <div class="foot">
 
-  <footer><button class="tweetButton"><a class="postTweet btn" type="button" ng-click=tweet()  href={{tweet}} name="button">Tweet</a></button></footer>
+  <a class="fa fa-twitter fa-4x foot" type="button" ng-click=tweet()  href={{tweet}} name="button">Tweet</a>
 
 </div>
