--- a/views/home.html
+++ b/views/home.html
@@ -1,14 +1,13 @@
 <link rel="stylesheet" href="styles/home.css">
 
 
-<div class="">
+<div class="divImage">
 
-  <img ng-src={{index}} alt="">
+  <img class="movie" ng-src={{index}} alt="">
 
 </div>
 
 <div class="foot">
 
-  <footer><a class="postTweet" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a></footer>
-
+  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a>
 </div>
