--- a/styles/drama.css
+++ b/styles/drama.css
@@ -1,8 +1,15 @@
-
+body{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIkCabajAfI6TqVpCG7H62Qpem-W7hKeAioR38ZgxlDiD-IhYM')
+}
 .button{
   background: linear-gradient(orange,blue);
 
 }
+.tweetButton{
+  background-color: orange; /* Green */
+
+}
 .foot{
   display: flex;
+  color: orange;
 }
