--- a/views/action.html
+++ b/views/action.html
@@ -8,4 +8,4 @@
 
 
 
-<a class="fa fa-twitter fa-4x foot"href={{tweet}} type="button" ng-click=tweet() name="button">Tweet</a>
+<a class="fa fa-twitter fa-4x foot"href={{tweet}} type="button" ng-click=sendTweet() name="button">Tweet</a>
