--- a/views/romance.html
+++ b/views/romance.html
@@ -7,5 +7,5 @@
 
 <div class="foot">
 
-  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a>
+  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" sendTweet()  name="button">Tweet</a>
 </div>
