--- a/views/comedy.html
+++ b/views/comedy.html
@@ -9,6 +9,6 @@
 
 <div class="foot">
 
-  <a class="fa fa-twitter fa-4x foot" type="button" ng-click=tweet()  href={{tweet}} name="button">Tweet</a>
+  <a class="fa fa-twitter fa-4x foot" type="button" ng-click=sendTweet()  href={{tweet}} name="button">Tweet</a>
 
 </div>
