--- a/views/fantasy.html
+++ b/views/fantasy.html
@@ -10,6 +10,6 @@
 
 <div class="foot">
 
-  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a>
+  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=sendTweet()  name="button">Tweet</a>
 
 </div>
