--- a/views/home.html
+++ b/views/home.html
@@ -9,5 +9,5 @@
 
 <div class="foot">
 
-  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=tweet()  name="button">Tweet</a>
+  <a class="fa fa-twitter fa-4x foot" href={{tweet}} type="button" ng-click=sendTweet()  name="button">Tweet</a>
 </div>
