--- a/views/comedy.html
+++ b/views/comedy.html
@@ -1,12 +1,14 @@
-<link rel="stylesheet" href="styles/comedy.css">
 
-<div class="divImage">
 
-  <img class="movie" ng-src={{test}} alt="">
+<div class="myContainer">
+  <img syle="border: solid"class="backgroundImage" src="https://thenypost.files.wordpress.com/2014/12/seinfeld.jpg?quality=90&strip=all'" alt="">
 
 </div>
-
-
+<div class="divImage">
+    
+        <img id="movie" ng-src={{test}} alt="">
+    
+      </div>
 <div class="foot">
 
   <a class="fa fa-twitter fa-4x foot" type="button" ng-click=sendTweet()  href={{tweet}} name="button">Tweet</a>
