--- a/views/action.html
+++ b/views/action.html
@@ -1,7 +1,11 @@
-<link rel="stylesheet" href="styles/action.css">
+
+<div class="myContainer">
+  <img syle="border: solid"class="backgroundImage" src="./img/Drive.jpg" alt="">
+
+</div>
 <div class="divImage">
 
-  <img class="movie" ng-src={{test}} alt="">
+  <img id="movie" ng-src={{test}} alt="">
 
 </div>
 
