--- a/views/fantasy.html
+++ b/views/fantasy.html
@@ -1,9 +1,10 @@
-<link rel="stylesheet" href="styles/fantasy.css">
+<div class="myContainer">
+  <img syle="border: solid"class="backgroundImage" src="./img/Drive.jpg" alt="">
 
-
+</div>
 <div class="divImage" >
 
-  <img class="movie" ng-src={{test}} alt="">
+  <img id="movie" ng-src={{test}} alt="">
 
 
 </div>
