--- a/views/thriller.html
+++ b/views/thriller.html
@@ -1,9 +1,12 @@
-<link rel="stylesheet" href="styles/thriller.css">
-<div class="divImage">
-
-  <img class="movie" ng-src={{test}} alt="">
+<div class="myContainer">
+  <img syle="border: solid"class="backgroundImage" src="./img/Drive.jpg" alt="">
 
 </div>
+  <div class="divImage">
+
+    <img id="movie" ng-src={{test}} alt="">
+
+  </div>
 
 
 <div class="foot">
