--- a/views/romance.html
+++ b/views/romance.html
@@ -1,6 +1,6 @@
 
 <div class="myContainer">
-  <img syle="border: solid"class="backgroundImage" src="./img/Drive.jpg" alt="">
+  <img syle="border: solid"class="backgroundImage" src="./img/CasaBlanca.jpg" alt="">
 
 </div>
 <div class="divImage">
